use new logo asset

--- a/app/views/sales/_sale_modal.html.erb
+++ b/app/views/sales/_sale_modal.html.erb
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <div id="sale_modal_<%= sale.id %>" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-header">
-    <button type="button" class="close modal-brand" data-dismiss="modal" aria-hidden="true">×</button><center><a href="/sales"><img src="/assets/Logo_Icon_Small.png" class="modal-brand" height="34" width="180" /></a></center><br>
+    <button type="button" class="close modal-brand" data-dismiss="modal" aria-hidden="true">×</button><center><a href="/sales"><img src="/assets/Logo_Website_v2.png" class="modal-brand" height="34" width="180" /></a></center><br>
     <p id="myModalLabel"></p>
   </div>
 
