--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
           </div>
 
 
-          <a class="brand" href="/"><img src="/assets/Logo_Icon_Small.png" height="34" width="180" /></a>
+          <a class="brand" href="/"><img src="/assets/Logo_Website_v2.png" height="34" width="180" /></a>
 		
           <div class="nav-collapse collapse">
             <ul class="nav">
