--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -67,7 +67,9 @@
     <% unless detail %>
       <span class="modal-social">
         <a href="#" onclick="fave(<%= sale.id %>); return false">
-        <img src="/assets/heart_16_16.png" height="16px" width="16px">&#160;&#160;
+          <% heart_src = (sale.my_fave_id ? "/assets/heart_16_16.png" : 
+                          "http://s3.amazonaws.com/mst-images-shared/heart_outline.png") %>
+          <img id="fave_icon_<%= sale.id %>" src="<%= heart_src %>" height="16px" width="16px">&#160;&#160;
         </a>
       <a href="<%= sale_url(sale.id) %>">
         <img src="/assets/comments_web.png" height="16px" width="16px">
