--- a/app/assets/stylesheets/jess.css
+++ b/app/assets/stylesheets/jess.css
@@ -84,7 +84,7 @@
   left: 0px;
   /* and don't display it */
   display: none;
-  background-color: rgba(102, 102, 102, .8);
+  background-color: #432060;
   height: 38px;
   width: 100%;
   text-align:justify;
