--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
     <div id="footer">
 	    <div class="container">
 		    <div align="center">
-	        <a href="FAQ.html">FAQ</a> | <a href="tos.html">Terms of Service</a> | <a href="privacy.html">Privacy</a></p>
+	        <a href="/page/faq-shoppers">FAQ</a> | <a href="/page/tos">Terms of Service</a> | <a href="/page/privacy">Privacy</a></p>
 	      </div>
 	    </div>
 	  </div>
