--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,6 +12,14 @@ body {
   </div>
 <% end %>
 
+<% if flash[:message] %>
+  <div class="alert alert-info"> 
+    <center>
+    <%= flash[:message] %>
+    </center>
+  </div>
+<% end %>
+
 
 	<div class="container">
 		<div class="marketing">
