--- a/app/views/sales/_sale_modal.html.erb
+++ b/app/views/sales/_sale_modal.html.erb
@@ -12,7 +12,9 @@
   <div class="modal-footer">
     <span class="row-fluid">
       <% if sale.user and sale.user.is_merchant %>
-      <a href="<%= new_sale_purchase_url(:sale_id => sale.id) %>" class="btn btn-success span4 pull-right">Buy</a>
+        <a href="<%= new_sale_purchase_url(:sale_id => sale.id) %>" class="btn btn-success span4 pull-right">Buy</a>
+      <% else %>
+        <a href="#" class="btn btn-success span4 pull-right disabled">Buy</a>
       <% end %>
     </span>
   </div>
