--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -158,8 +158,8 @@ jQuery(function($) {
     <a href="<%= fb_share_url(sale) %>">
       <img src="/assets/f_logo.png" height="16px" width="16px">&#160;&#160;
     </a>
-    <a href="<%= twitter_share_url(sale) %>"
-      <img src="/assets/T_logo.png" height="16px" width="16px">
+    <a href="<%= twitter_share_url(sale) %>">
+      <img src="/assets/T_logo.png" height="16px" width="16px">&#160;&#160;
     </a>
 
     <span class="comments form">
