--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -47,6 +47,12 @@
 
   <div class="container">
 
+    <% if flash[:message] %>
+      <div class="alert alert-success">
+        <%= flash[:message] %>.
+      </div>
+    <% end %>
+
     <%= yield %>
 
   </div>
