--- a/app/views/sales/_sales.html.erb
+++ b/app/views/sales/_sales.html.erb
@@ -20,51 +20,53 @@ function fave(sale_id) {
     });
   }
 }
+
+
+  yayo = null;
+
+  var loading = false;
+  var currentPage = 1;
+  var lastPage = false;
+
+  var more_base_url = "/sales.html";
+  var more_base_data = {category_id: <%= params[:category_id] %>};
+
+  function addPage() {
+    $.get(more_base_url, 
+      $.extend(more_base_data, {page: currentPage+1}), 
+      function(d){
+        yayo = d;
+        if (d.length == 0) {
+          lastPage = true;
+        } else {
+          $('#sales-container').append(d);
+          currentPage++;        
+          loading = false;
+        }
+      });
+  };
+
+  $(window).scroll(function(){
+
+    if (loading || lastPage) {
+      return;
+    }
+
+    if  ($(window).scrollTop() > $(document).height() - $(window).height() - 200)
+    {
+      loading = true;
+
+      setTimeout(function(){
+        addPage();
+      }, 250);
+    }
+
+  });
+
 </script>
 
-  <% 
-        @sale_rows = [[]]
-        @sales.each_with_index do |sale, i|
-          if i>0 && i%4 == 0
-            @sale_rows << []
-          end
-          @sale_rows.last << sale
-        end
-    %>
-
-    <% @sale_rows.each do |row| %>
-      <div class="row-fluid">
-		    <div class="container">
-          <ul class="thumbnails">
-
-      <% row.each do |sale| %>
-
-        <li class="span3">
-          <div class="hover-group">
-            <div class="image-wrapper">
-              <a href="#sale_modal_<%= sale.id %>" data-toggle="modal">
-                <img class="product-pic" src="<%= sale.image_0.versions[:web_index] %>" alt="">
-              </a>
-              <span class="thisInfo">
-                <p class="lanvin"><%= sale.brand %></p>
-                <p class="flats">Size <%= sale.size %><p>
-                <p><i><%= sale.metro.name %></i></p>
-              </span>
-				    <div class="hover-toggle">
-              <center><span class="percentoff"><%= (sale.percent_off * 100).round %>% Off</span></center>
-				    </div>
-          </div>
-        </div>
-       </li>
-
-      <% end %>
-
-          </ul>
-        </div>
-      </div>
-    <% end %>
 
 
-    <% @sales.each do |sale| %>
-      <%= render :partial => "sales/sale_modal", :locals => {:sale => sale} %>
-    <% end %>
+<div id="sales-container">
+  <%= render :partial => "sales/sale_rows" %>
+</div>
