add #mysaletable to detail

--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -177,8 +177,9 @@ jQuery(function($) {
       <img src="/assets/f_logo.png" height="16px" width="16px">&#160;&#160;
     </a>
     <a href="<%= twitter_share_url(sale) %>">
-      <img src="/assets/T_logo.png" height="16px" width="16px">&#160;&#160;
+      <img src="/assets/T_logo.png" height="16px" width="16px">
     </a>
+    <font size="4">&#160;#mysaletable</font>
 
     <span class="comments form">
       <h3>Comments</h3>
