purchase form, shipping calculates

--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -18,95 +18,8 @@ body {
           </div>
           <% end %>
 
-          <fieldset>
-            <form id='payment-form' action='<%= Braintree::TransparentRedirect.url %>' method='POST'>              
-              <input type="hidden" name="tr_data" value="<%= @tr_data %>" />
-
-              <legend>Preferred Payment
-                <button id="submitButton" onclick="$('#submitButton')[0].innerText='Processing...'; $('#submitButton')[0].disabled = true; $('#payment-form').submit(); return false;" type="submit" class="btn btn-success pull-right">Submit Payment</button></legend>
-
-              <input name="transaction[customer][first_name]" type="text" class="input-small" placeholder="First Name" value="<%= params[:first_name] %>">
-              <input name="transaction[customer][last_name]" type="text" class="input-small" placeholder="Last Name" value="<%= params[:last_name] %>">
-              <br>
-              <input name="transaction[credit_card][number]"  autocomplete="off" type="text" class="span4" placeholder="Card Number">
-              <input name="transaction[credit_card][cvv]" type="text" class="span3" placeholder="Security Code">
-
-
-              <div class="" style="">
-                <p>Expiration Date</p>
-                <select name="transaction[credit_card][expiration_month]">
-                  <option>Month</option>
-                  <%= options_for_select((1..12).to_a, params[:exp_month].to_i) %>
-                </select>
-                <select name="transaction[credit_card][expiration_year]">
-                  <%= options_for_select((["Year"] + (Time.now.year..Time.now.year+10).to_a), params[:exp_year].to_i) %>
-                </select>
-
-              </div>
-
-              <script>
-function toggleAddress() {
-  $('#address-container')[0].hidden = !$('#ship')[0].checked
-}
-
-$(document).ready(function() {
-  toggleAddress();
-});
-              </script>
-                
-              <div class="" style="">
-                <hr>
-                <p>
-                <%= check_box_tag "ship", '1', params[:ship], :onchange => "toggleAddress()" %>
-                Add shipping within the continental U.S. for a flat rate of $5
-                </p>
-                  
-                <div id="address-container">
-                  <input type="text" class="span4" name="address" placeholder="Street Address" value="<%= params[:address] %>">
-                  <input type="text" class="span4" name="address_2" placeholder="Apt." value="<%= params[:address_2] %>"><br>
-                  <input type="text" class="input-small" name="city" placeholder="City" value="<%= params[:city] %>">
-                  <select class="expiration" name="state">
-                    <% state_codes = Carmen::Country.named("United States").subregions.collect(&:code) %>
-                    <%= options_for_select(state_codes, params[:state]) %>
-                  </select>
-
-                  <input type="text" class="input-small" name="zip" placeholder="Zip Code" value="<%= params[:zip] %>">
-                </div>
-              </div>
-
-
-              <div class="pull-right">
-                <table class="table table-bordered">  
-                  <tr>
-                    <td>
-                      <font size="3" class="muted">Sale Price</font>
-                    </td>
-                    <td>
-                      <%= humanized_money_with_symbol @sale.sale_price %>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <font size="3" class="muted">Sales Tax</font>
-                    </td>
-                    <td>
-                      <%= humanized_money_with_symbol @tax_amount %>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <font size="3" class="muted">Total</font>
-                    </td>
-                    <td>
-                      <%= humanized_money_with_symbol @total_amount %>
-                    </td>
-                  </tr>
-                </table>
-              </div>
-
-            </fieldset>
-            
-              </form>
+          <%= render :partial => 'purchases/form' %>
+              
           </div><!--end marketing -->		
         </div><!--end container -->
       </div><!--end row-fluid -->
